Fix: new change fee structure
