# internal/storage/types/action_type_enum.go
@@ -19,8 +19,8 @@ import (
 const (
 	// ActionTypeTransfer is a ActionType of type transfer.
 	ActionTypeTransfer ActionType = "transfer"
-	// ActionTypeSequence is a ActionType of type sequence.
-	ActionTypeSequence ActionType = "sequence"
+	// ActionTypeRollupDataSubmission is a ActionType of type rollup_data_submission.
+	ActionTypeRollupDataSubmission ActionType = "rollup_data_submission"
 	// ActionTypeValidatorUpdate is a ActionType of type validator_update.
 	ActionTypeValidatorUpdate ActionType = "validator_update"
 	// ActionTypeSudoAddressChange is a ActionType of type sudo_address_change.
@@ -51,7 +51,7 @@ var ErrInvalidActionType = fmt.Errorf("not a valid ActionType, try [%s]", string
 
 var _ActionTypeNames = []string{
 	string(ActionTypeTransfer),
-	string(ActionTypeSequence),
+	string(ActionTypeRollupDataSubmission),
 	string(ActionTypeValidatorUpdate),
 	string(ActionTypeSudoAddressChange),
 	string(ActionTypeIbcRelay),
@@ -77,7 +77,7 @@ func ActionTypeNames() []string {
 func ActionTypeValues() []ActionType {
 	return []ActionType{
 		ActionTypeTransfer,
-		ActionTypeSequence,
+		ActionTypeRollupDataSubmission,
 		ActionTypeValidatorUpdate,
 		ActionTypeSudoAddressChange,
 		ActionTypeIbcRelay,
@@ -107,7 +107,7 @@ func (x ActionType) IsValid() bool {
 
 var _ActionTypeValue = map[string]ActionType{
 	"transfer":                  ActionTypeTransfer,
-	"sequence":                  ActionTypeSequence,
+	"rollup_data_submission":    ActionTypeRollupDataSubmission,
 	"validator_update":          ActionTypeValidatorUpdate,
 	"sudo_address_change":       ActionTypeSudoAddressChange,
 	"ibc_relay":                 ActionTypeIbcRelay,
